# mictlanx-service

./: .env.dev  .env.local  .env.rm.dev  .gitignore  Dockerfile  README.md  build.sh  clean_dist.sh  deploy.sh  deploy_static.sh  deploy_summoner.sh  docker-compose.yml  install_ec.sh  mictlanx-devx.yml  mictlanx-router.yml  mictlanx.yml  peers-dev.json  peers.json  pyproject.toml  reload_mictlanx.sh  requirements.backup.txt  requirements.txt  router-http2.yml  router-static.yml  router.yml  run.sh  run_jaeger.sh  run_local.sh  run_local_gunicorn.sh  run_local_hcorn.sh  run_opentelemetry.sh  upgrade_mictlanx.sh
.github/ISSUE_TEMPLATE/: 1-bug.yml  2-feature-request.yml  3-task.yml
.github/workflows/: run_test.yml
mictlanxrouter/: config.py  server.py
mictlanxrouter/_async/: __init__.py  heater.py  peer_manager.py  peer_manager_daemon.py  replica_management.py  replicator_daemon.py
mictlanxrouter/caching/: __init__.py
mictlanxrouter/controllers/: __init__.py  buckets.py  cache.py  data_replicator.py  peers.py  replica_manager.py  tasks.py
mictlanxrouter/decorators/: __init__.py
mictlanxrouter/dto/: __init__.py  data_replication.py  index.py  metadata.py  tasks.py
mictlanxrouter/errors/: __init__.py
mictlanxrouter/garbage_collector/: __init__.py
mictlanxrouter/helpers/: utils.py
mictlanxrouter/interfaces/: __init__.py  garbagcollector.py  healer.py
mictlanxrouter/interfaces/dto/: index.py  metadata.py
mictlanxrouter/log/: __init__.py  logger_config.py
mictlanxrouter/middlewares/: __init__.py  cpu_profiler.py  memory_profiler.py
mictlanxrouter/opentelemetry/: __init__.py
mictlanxrouter/peer_manager/: __init__.py  healer.py
mictlanxrouter/replication/: __init__.py
mictlanxrouter/replication_manager/: __init__.py
mictlanxrouter/tasksx/: __init__.py
opentelemetry/: docker-compose.yml
src/: server.py
src/interfaces/: garbagcollector.py  healer.py
src/interfaces/dto/: index.py  metadata.py
tests/: conftest.py  ida.py  mictlanxrouter_test.py  replication.py  test_buckets_controller.py  test_cache.py  test_cache_controller.py  test_env.py  test_peers_controller.py
