[tool.poetry]
name = "mictlanxrouter"
version = "0.0.161.alpha-5"
description = ""
authors = ["Ignacio Castillo <ignacio.bcastillo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4"
option = "^2.1.0"
nanoid = "^2.0.0"
pydantic = "^2.7.1"
fastapi = "^0.111.0"
python-multipart = "^0.0.9"
aiorwlock = "^1.4.0"
numpy =">=1.21,<=1.26"


uvicorn = "^0.30.1"
requests = "^2.32.3"

opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-instrumentation-fastapi = "^0.46b0"
opentelemetry-exporter-otlp-proto-http = "^1.25.0"
opentelemetry-exporter-zipkin = "^1.25.0"

prometheus-fastapi-instrumentator = "^7.0.0"
hypercorn = "^0.17.3"
aiofiles = "^24.1.0"
lmdb = "^1.6.2"
mictlanxrm = "0.0.161a4"
[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
more-itertools = "^10.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/simple/"
priority = "supplemental"
