[tool.poetry]
name = "mictlanxrouter"
version = "0.0.161.alpha-5"
description = ""
authors = ["Ignacio Castillo <ignacio.bcastillo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
option = "^2.1.0"
nanoid = "^2.0.0"
fastapi = "^0.111.0"
python-multipart = "^0.0.9"
aiorwlock = "^1.4.0"
numpy =">=1.21,<=1.26"


uvicorn = "^0.30.1"
requests = "^2.32.3"

opentelemetry-api = ">=1.27,<2"
opentelemetry-sdk = ">=1.27,<2"
opentelemetry-instrumentation-fastapi = ">=0.47b0"
opentelemetry-exporter-otlp-proto-http = "^1.25.0"
opentelemetry-exporter-zipkin = "^1.25.0"

prometheus-fastapi-instrumentator = "^7.0.0"
hypercorn = "^0.17.3"
aiofiles = "^24.1.0"
lmdb = "^1.6.2"
gunicorn = "^23.0.0"
tenacity = "^9.1.2"
pydantic = "^2.11.7"
opentelemetry-instrumentation = ">=0.47b0"
opentelemetry-instrumentation-asgi = ">=0.47b0"
mictlanxrm = {path = "/home/nacho/Programming/Python/mictlanx-healer/dist/mictlanxrm-0.1.0a0.tar.gz"}
[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
more-itertools = "^10.2.0"
coverage = "^7.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/simple/"
priority = "supplemental"
