[tool.poetry]
name = "mictlanxrouter"
version = "0.1.0a5"
description = ""
authors = ["Ignacio Castillo <ignacio.bcastillo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4"
option = "^2.1.0"
nanoid = "^2.0.0"
fastapi = "^0.111.0"
python-multipart = "^0.0.9"
aiorwlock = "^1.4.0"


uvicorn = "^0.30.1"
requests = "^2.32.3"

opentelemetry-api = "^1.39.1"
opentelemetry-sdk = "^1.39.1"
opentelemetry-instrumentation-fastapi = ">=0.60b1"
opentelemetry-exporter-otlp-proto-http = ">=1.39.1"
opentelemetry-instrumentation = ">=0.60b1"
opentelemetry-instrumentation-asgi = ">=0.60b1"
prometheus-fastapi-instrumentator = ">=7.1.0"

hypercorn = "^0.17.3"
aiofiles = "^24.1.0"
lmdb = "^1.6.2"
gunicorn = "^23.0.0"
tenacity = "^9.1.2"
pydantic = "^2.11.7"
mictlanxrm = "0.1.0a4"
mictlanx = "0.1.0a2"
setuptools = "^82.0.0"
pyinstrument = "^5.1.2"
memray = "^1.19.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
more-itertools = "^10.2.0"
coverage = "^7.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "test"
url = "https://test.pypi.org/simple/"
priority = "supplemental"
